# AQS

./: .commands.aqc  .gitignore  LICENSE  Makefile  README.md  aqs  go.mod  main.go  test_aqs.py
.github/workflows/: release.yml
deprecated/: README.md  pyproject.toml  requirements.txt
