[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqs"
version = "1.0.0"
description = "Fuzzy search your shell command history with fzf"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AQS Contributors"}
]
keywords = ["cli", "shell", "history", "fzf", "fuzzy-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rapidfuzz>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]

[project.scripts]
aqs = "aqs_cli:main"

[project.urls]
Homepage = "https://github.com/amantham20/aqs"
Repository = "https://github.com/amantham20/aqs"
Issues = "https://github.com/amantham20/aqs/issues"

[tool.setuptools]
py-modules = ["aqs_cli"]
